bk_ida/gccida/g1/do_store_flag
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_store_flag/src/expr.c:10623:43: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  do_store_flag( tree exp, rtx target, machine_mode mode, int only_cheap) 
                                          ^
                                          enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_store_flag/src/expr.c:10634:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v14; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_store_flag/src/expr.c:10635:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code v15; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_store_flag/src/expr.c:10644:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_store_flag/src/expr.c:10665:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode operand_mode; // [rsp+4h] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_store_flag/src/expr.c:10814:35: error: use of undeclared identifier 'machine_mode'
v9 = expand_shift( RSHIFT_EXPR, ( machine_mode)v8, v9, v24, subtargeta, 1); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_store_flag/src/expr.c:10833:29: error: use of undeclared identifier 'machine_mode'
if ( !can_compare_p( v14, ( machine_mode)v8, ccp_store_flag) ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_store_flag/src/expr.c:10838:45: error: use of undeclared identifier 'insn_data_0'
if ( !only_cheap || *( ( unsigned __int16 *)insn_data_0[v15].operand + 8) == mode ) 
                                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_store_flag/src/expr.c:10901:21: error: use of undeclared identifier 'machine_mode'
v9 = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)target + 2)); 
                    ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_store_flag/src/obj/expr.o] Error 1
